# learnings

./: .gitignore  README.md  environment.yaml  example.py  miniai.py  pyproject.toml  tabular.py  test.ipynb  test_miniai.ipynb  utils.py
asyncio_tutorial/: example0.py  example1.py  example2.py  example3.py  example4.py  example5.py  real_world_example_async_v1.py  real_world_example_async_v2.py  real_world_example_async_v3.py  real_world_example_sync_v1.py  terms.py
basics/: basic_args.py  basic_logging.py  basic_lru.py  basic_lru2.py  basic_oop.py  basic_os.py  load_data.py
examples/: basic_fastcore.py
miniai/: miniai.py  miniai_ORIGINAL.py  tabular.py  test_miniai.ipynb  utils.py
python_db_examples/: 00_raw_dbapi.py  01_dbapi_context_managers.py  02_sessionish_wrapper.py  03_sqlalchemy_core.py  04_sqlalchemy_orm.py
python_io_examples/: csv_io.py  json_io.py  notes.md  pickle_io.py  text_io.py
tests/: test_external.py  test_math.py  test_text.py  test_tmp_file.py
