[tool.poetry]
name = "t3"
version = "0.1.0"
description = ""
authors = ["Himanshu <himanshu@hunch.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
fastcore = "^1.7.1"
nbconvert = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
